robot  ekley: [[ksh:Bulljaarije]]

--- a/Bulğaristan.mw
+++ b/Bulğaristan.mw
@@ -42,7 +42,9 @@
 
 [[Category:Bulğaristan| ]]
 
-[[af:Bulgarye]] {{Link FA|af}}
+{{Link FA|af}}
+
+[[af:Bulgarye]]
 [[als:Bulgarien]]
 [[am:ቡልጋሪያ]]
 [[an:Bulgaria]]
@@ -115,6 +117,7 @@
 [[kk:Бұлғарстан]]
 [[kn:ಬಲ್ಗೇರಿಯ]]
 [[ko:불가리아]]
+[[ksh:Bulljaarije]]
 [[ku:Bulgaristan]]
 [[kw:Bulgari]]
 [[ky:Болгария]]
