--- a/Bağçasaray.mw
+++ b/Bağçasaray.mw
@@ -84,7 +84,7 @@ Cenkten soñ [[Eski Yurt]], [[Aziz]], [[Aqçoqraq]] ve [[Salaçıq]] (Staroselye
 Şeerde ihtisasiy oquv yurtu, qurucılıq tehnikumı, tabiat evi, seyaat ve kezintiler bürosı çalışalar.
 
 == Bağlantılar ==
-{{Commons|Bakhchisaray}}
+{{Commonscat|Bakhchisaray|Bağçasaray}}
 * [http://www.hansaray.iatp.org.ua/ Hansaraynıñ resmiy saytı]
 * [http://sova.rsh.ru/bahchisaraj/index.html Bağçasaraydaki Hansaraynıñ fotogalereyası]
 * [http://sova.rsh.ru/ch-kale/index.html «Qobalı şeer» Çufut Qale]
