[[pl:Dialekt śląski]]

--- a/Silez_tili.mw
+++ b/Silez_tili.mw
@@ -15,7 +15,7 @@
 [[İnd-Avrоpa tilleri|İnd-Avrоpa]]
 :[[Slavân tilleri|Slavân]]
 ::[[Ğarbiy Slavân tilleri|Ğarbiy Slavân]]
-:::[[Lehit tilleri|Lehit]]
+:::[[Leh tili]]
 ::::Silez tili
  |elifbe        = [[latin elifbesi]]
  |ISO1          = 
@@ -46,7 +46,7 @@
 [[kk:Сілез тілі]]
 [[ko:실레지아어]]
 [[no:Schlesisk]]
-[[pl:Język śląski]]
+[[pl:Dialekt śląski]]
 [[ro:Limba sileziană]]
 [[ru:Силезский диалект польского языка]]
 [[sh:Šlezijci]]
