*Empty MediaWiki Message*

--- a/Şamil_Alâdin.mw
+++ b/Şamil_Alâdin.mw
@@ -2,18 +2,18 @@
 
 Şamil Alâdin 1912 senesiniñ iyül 12-de [[Yalta uyezdi]]niñ [[Mahuldür]] köyünde doğdı. [[Bağçasaray]]da yedi yıllıq mektepni bitirdi. Anda Şamil o zamannıñ belli ocası [[Yağya Bayburtlı]]dan ders ala, edebiyatqa sevgi ve aveslikni de oña şu ocası aşlay. Ondan soñ o [[Aqmescit]]te pedagogika tehnikumını bitirdi, soñra [[pedinstitut]]ta oqudı.
 
-Soñundan iri nesirci olıp yetişken Şamil Alâdin edebiyatqa 15 yaşında, yani 1927 senesi [[İsmail Gasprinskiy]]ge bağışlağan ve «Yaş quvet»te basılğan «Tañ bülbüli» şiirinen keldi. Tehnikumda oquğan Şamil Alâdin gazeta ve mecmualarda bir sıra şiirler bastıra. Onıñ bu şiirleri 1932 senesi «Topraq küldi, kök küldi» serlevasınen çıqqan birinci kitabına kirdiler. Bu kitapqa yaş müellifniñ 10-dan ziyade şiiri kirgen olıp, o şiirler Şamil Alâdin ayatnıñ passiv bir közeticisi degil de, onıñ faal tasvir etici ekenini, o gazeta ve mecmualarda oqup bilgen şeyleri aqqında degil de, özü körgen, özünde eyecan doğurğan, özüni coşturğan vaqialar aqqında yazğanını köstereler.
+Soñundan iri nesirci olıp yetişken Şamil Alâdin edebiyatqa 15 yaşında, yani 1927 senesi [[İsmail Gasprinskiy]]ge bağışlağan ve “Yaş quvet”te basılğan “Tañ bülbüli” şiirinen keldi. Tehnikumda oquğan Şamil Alâdin gazeta ve mecmualarda bir sıra şiirler bastıra. Onıñ bu şiirleri 1932 senesi “Topraq küldi, kök küldi” serlevasınen çıqqan birinci kitabına kirdiler. Bu kitapqa yaş müellifniñ 10-dan ziyade şiiri kirgen olıp, o şiirler Şamil Alâdin ayatnıñ passiv bir közeticisi degil de, onıñ faal tasvir etici ekenini, o gazeta ve mecmualarda oqup bilgen şeyleri aqqında degil de, özü körgen, özünde eyecan doğurğan, özüni coşturğan vaqialar aqqında yazğanını köstereler.
 
-1932 senesiniñ soñunda Şamil Alâdin [[Qızıl Ordu]]ğa çağırıla, anda Qızıl kazak atlılar polkunda hızmet ete. Soñra 1935 senesi o «Qızıl kazaknıñ yırları» adlı ekinci şiiriy kitabını çıqara. 9 şiirden ibaret bu kitap şairniñ yañı icadiy araştıruvlar yolunda olğanını köstere. Bu araştıruvlar neticesinde müellif şunı añladı ki, oña öz fikirlerini istegeni kibi tolu ve keniş sürette ifade etmek içün nesirge baş urmaq kerek. Em öyle de yapa. Soñundan basılğan bir sıra nesir eserleri onıñ bu fikriniñ doğrulığını tasdiqladılar. Edip 1937 senesi [[ŞSCB]] yazıcıları birligine azalıqqa qabul oluna.
+1932 senesiniñ soñunda Şamil Alâdin [[Qızıl Ordu]]ğa çağırıla, anda Qızıl kazak atlılar polkunda hızmet ete. Soñra 1935 senesi o “Qızıl qazaqnıñ yırları” adlı ekinci şiiriy kitabını çıqara. 9 şiirden ibaret bu kitap şairniñ yañı icadiy araştıruvlar yolunda olğanını köstere. Bu araştıruvlar neticesinde müellif şunı añladı ki, oña öz fikirlerini istegeni kibi tolu ve keniş sürette ifade etmek içün nesirge baş urmaq kerek. Em öyle de yapa. Soñundan basılğan bir sıra nesir eserleri onıñ bu fikriniñ doğrulığını tasdiqladılar. Edip 1937 senesi [[ŞSCB]] yazıcıları birligine azalıqqa qabul oluna.
 
-Ordu hızmetinden qaytıp kelgen soñ Şamil Alâdin aqiqiy eserler yazmaq içün çoq şey bilmek, çoq ayat tecribesini elde etmek kerekligini añlap, [[komsomol]] yollanmasınen [[Orta Asiya]]ğa kete. [[Çırçıq]] qurucılığında ekskavatorcı olıp çalışa. Birinci beşyıllıqnıñ bu iri qurucılığı, büyük işçi kollektivi, andaki munasebetler, iş protsessindeki qıyınlıqlar yaş romantik yazıcı içün kerçekten de ciddiy emek ve ayat mektebi ola. Bu vaqialar esasında o çoq yıllardan soñ, sürgünlik devrinde «Eger sevseñ» romanını yazacaqtır.
+Ordu hızmetinden qaytıp kelgen soñ Şamil Alâdin aqiqiy eserler yazmaq içün çoq şey bilmek, çoq ayat tecribesini elde etmek kerekligini añlap, [[komsomol]] yollanmasınen [[Orta Asiya]]ğa kete. [[Çırçıq]] qurucılığında ekskavatorcı olıp çalışa. Birinci beşyıllıqnıñ bu iri qurucılığı, büyük işçi kollektivi, andaki munasebetler, iş protsessindeki qıyınlıqlar yaş romantik yazıcı içün kerçekten de ciddiy emek ve ayat mektebi ola. Bu vaqialar esasında o çoq yıllardan soñ, sürgünlik devrinde “Eger sevseñ” romanını yazacaqtır.
 
-1939 senesi Şamil Alâdin Qırımğa qaytıp kele ve onı Qırım yazıcıları birliginiñ vazifesine saylaylar. Aynı şu yılı onıñ 9-ıncı sınıflar içün tertip etken «Edebiyat hrestomatiya»sı basılıp çıqa. Onıñ Qırımğa qaytıp kelgen soñ yazğan «Sensiñmi, oğlum?» povesti işte şu qurucılıqta alğan teessüratları esasında doğğan eserdir. Onıñ esasını yaşlıqnıñ emek romantikası, coşqunlığı, yañı ayat entuziazmı teşkil etmekte. Bu yıllarda, yani 1936–1939 seneleri edebiyat mecmuasında onıñ bu povestinden başqa «Gecelev» ikâyesi, «Merdiven», «Şalanda» povestleri ve diger eserleri basıldı, 1940 senesi ise şiiriy ve nesir eserlerinden ibaret «Ömür» adlı cıyıntığı çıqtı. Ayrı eserleri rus tiline tercime etilip, 1937 senesi «Пoэты Крыма» (Qırım şairleri) ve 1940 senesi «Татарскиe писатeли Крыма» (Qırım tatar yazıcıları) cıyıntıqlarına kirsetileler.
+1939 senesi Şamil Alâdin Qırımğa qaytıp kele ve onı Qırım yazıcıları birliginiñ vazifesine saylaylar. Aynı şu yılı onıñ 9-ıncı sınıflar içün tertip etken “Edebiyat hrestomatiya”sı basılıp çıqa. Onıñ Qırımğa qaytıp kelgen soñ yazğan “Sensiñmi, oğlum?” povesti işte şu qurucılıqta alğan teessüratları esasında doğğan eserdir. Onıñ esasını yaşlıqnıñ emek romantikası, coşqunlığı, yañı ayat entuziazmı teşkil etmekte. Bu yıllarda, yani 1936–1939 seneleri edebiyat mecmuasında onıñ bu povestinden başqa “Gecelev” ikâyesi, “Merdiven”, “Şalanda” povestleri ve diger eserleri basıldı, 1940 senesi ise şiiriy ve nesir eserlerinden ibaret “Ömür” adlı cıyıntığı çıqtı. Ayrı eserleri rus tiline tercime etilip, 1937 senesi “Пoэты Крыма” (Qırım şairleri) ve 1940 senesi “Татарскиe писатeли Крыма” (Qırım tatar yazıcıları) cıyıntıqlarına kirsetileler.
 
 1941 senesi cenk başlanğanınen cebege kete ve diger Qırım yazıcılarınıñki kibi, onıñ da icadiy faaliyeti uzaq devirgece üzüle. Cenkte o atlı ve cayav asker sıralarında vzvod ve eskadron komandiri olaraq uruştı, eki defa yaralandı.
 
 Cenkten qaytıp kelgen Şamil Alâdin öz qorantasını [[Özbekistan]]da taptı. Mında o biraz vaqıt yaş temaşıcılar teatriniñ direktorı vazifesinde çalıştı, soñra 1949 senesinden başlap çoq yıllar devamında Özbekistan yazıcıları birliginiñ apparatında edebiy konsültant, mesül kâtip olıp çalıştı. 
-1965–1966 seneleri az vaqıt «Lenin bayrağı» muarririniñ muavini oldı, soñ kene Yazıcılar birligine işke keçti.
+1965–1966 seneleri az vaqıt “Lenin bayrağı” muarririniñ muavini oldı, soñ kene Yazıcılar birligine işke keçti.
 
 1980–1985 seneleri ise «Yıldız» mecmuasınıñ baş muarriri oldı. Çoq yıllar Özbekistan yazıcıları birliginiñ yanındaki qırımtatar edebiyatı sektsiyasınıñ reisi oldı.
 
