--- a/Şamil_Alâdin.mw
+++ b/Şamil_Alâdin.mw
@@ -15,13 +15,13 @@ Ordu hızmetinden qaytıp kelgen soñ Şamil Alâdin aqiqiy eserler yazmaq içü
 Cenkten qaytıp kelgen Şamil Alâdin öz qorantasını [[Özbekistan]]da taptı. Mında o biraz vaqıt yaş temaşıcılar teatriniñ direktorı vazifesinde çalıştı, soñra 1949 senesinden başlap çoq yıllar devamında Özbekistan yazıcıları birliginiñ apparatında edebiy konsültant, mesül kâtip olıp çalıştı. 
 1965–1966 seneleri az vaqıt “Lenin bayrağı” muarririniñ muavini oldı, soñ kene Yazıcılar birligine işke keçti.
 
-1980–1985 seneleri ise «Yıldız» mecmuasınıñ baş muarriri oldı. Çoq yıllar Özbekistan yazıcıları birliginiñ yanındaki qırımtatar edebiyatı sektsiyasınıñ reisi oldı.
+1980–1985 seneleri ise “Yıldız” mecmuasınıñ baş muarriri oldı. Çoq yıllar Özbekistan yazıcıları birliginiñ yanındaki qırımtatar edebiyatı sektsiyasınıñ reisi oldı.
 
-[[Ekinci cian cenki]]niñ iştirakçisi Şamil Alâdin 1957 senesi Oktâbr inqilâbı ve Vatandaşlar cenki vaqialarını aks ettirgen «Teselli» povestini yazdı. Aynı şu devirde yazılğan «Çauş oğlu» povesti ise yazıcınıñ ayatiy ve icadiy diapazonı daa ziyade kenişlegenini köstere. 1961 senesi «Eger sevseñ» romanı, 1969 senesi  «Ruzgârdan sallanğan fenerler» romanı derc olundı.
+[[Ekinci cian cenki]]niñ iştirakçisi Şamil Alâdin 1957 senesi Oktâbr inqilâbı ve Vatandaşlar cenki vaqialarını aks ettirgen “Teselli” povestini yazdı. Aynı şu devirde yazılğan “Çauş oğlu” povesti ise yazıcınıñ ayatiy ve icadiy diapazonı daa ziyade kenişlegenini köstere. 1961 senesi “Eger sevseñ” romanı, 1969 senesi  “Ruzgârdan sallanğan fenerler” romanı derc olundı.
 
-Şamil Alâdin qırımtatar halqınıñ demokrat şairi, 1913 senesi reaktsionerler tarafından vahşiane öldürilgen [[Üsein Şamil Tohtarğazı]]nıñ ayatına bağışlanğan «İblisniñ ziyafetine davet» povestini yazdı. Müellif şairniñ ömürini qandırıcı sürette ve aynı zamanda bediiy şekilde tasvir etti. 1979 senesi ayrı kitap olıp çıqqan bu povest Şamil Alâdinniñ tarihiy-vesiqalı edebiyat janrında elde etken daa bir müim icadiy muvafaqiyeti oldı.
+Şamil Alâdin qırımtatar halqınıñ demokrat şairi, 1913 senesi reaktsionerler tarafından vahşiane öldürilgen [[Üsein Şamil Tohtarğazı]]nıñ ayatına bağışlanğan “İblisniñ ziyafetine davet” povestini yazdı. Müellif şairniñ ömürini qandırıcı sürette ve aynı zamanda bediiy şekilde tasvir etti. 1979 senesi ayrı kitap olıp çıqqan bu povest Şamil Alâdinniñ tarihiy-vesiqalı edebiyat janrında elde etken daa bir müim icadiy muvafaqiyeti oldı.
 
-1976–1977 seneleri Şamil Alâdinniñ eki cıltlıq saylama eserleri derc etildi. Bunda onıñ romanları ve ayrı povestleri kirsetildi. 1987 senesi ise edipniñ «Çoqraçıqlar» adlı büyük kölemde saylama eserleri kitabı neşir etildi. Bu kitapqa yazıcınıñ «Teselli», «İblisniñ ziyafetine davet», «Furtuna tınğan soñ» ve diger povestleri, ikâyeleri kirsetildi. «Çoqraçıqlar» kitabı Özbekistan yazıcıları birliginiñ Aybek adına mukâfatınen taqdirlendi. Edipniñ özüne ise Özbekistanda nam qazanğan medeniyet hadimi ve «Özbekistanda nam qazanğan sanat erbabı» kibi şerifli unvanlar berildi.
+1976–1977 seneleri Şamil Alâdinniñ eki cıltlıq saylama eserleri derc etildi. Bunda onıñ romanları ve ayrı povestleri kirsetildi. 1987 senesi ise edipniñ “Çoqraçıqlar” adlı büyük kölemde saylama eserleri kitabı neşir etildi. Bu kitapqa yazıcınıñ “Teselli”, “İblisniñ ziyafetine davet”, “Furtuna tınğan soñ” ve diger povestleri, ikâyeleri kirsetildi. “Çoqraçıqlar” kitabı Özbekistan yazıcıları birliginiñ Aybek adına mukâfatınen taqdirlendi. Edipniñ özüne ise Özbekistanda nam qazanğan medeniyet hadimi ve “Özbekistanda nam qazanğan sanat erbabı” kibi şerifli unvanlar berildi.
 
 Böylelikle, ilki nesir eserlerini cenkten evel bastırğan Şamil Alâdin umumen cenkten soñki qırımtatar edebiyatında iri nesirci sıfatında icat etip keldi.
 
@@ -29,12 +29,12 @@ Böylelikle, ilki nesir eserlerini cenkten evel bastırğan Şamil Alâdin umume
 
 Edip 1996 senesi mayıs 21-de, 84 yaşını toldurmadan vefat etti, [[Aqmescit]]niñ [[Abdal mezarlığı]]nda defn etildi.
 
-Yazıcınıñ tarihiy vaqialarğa bağışlap yañı yazıp başlağan «Toğay bey» romanı bitmey qaldı. Romannıñ baş qısmını edipniñ qızı jurnalist Leylâ Alâdinova azırlap «Yıldız» mecmuasınıñ 1998 senesi 1-inci sanında bastırdı.
+Yazıcınıñ tarihiy vaqialarğa bağışlap yañı yazıp başlağan “Toğay bey” romanı bitmey qaldı. Romannıñ baş qısmını edipniñ qızı jurnalist Leylâ Alâdinova azırlap “Yıldız” mecmuasınıñ 1998 senesi 1-inci sanında bastırdı.
 
 Şamil Alâdinniñ yaratıcılığınıñ diapazonı ğayet keniş olıp, çeşit janrlarda icat etken, büyük kölemli eserler – romanlar ve povestler yaratqan, acayip esse, ikâyeler yazğan, oçerkler ve publitsistik maqalelernen muntazam surette çıqışta bulunğan zemaneviy yazıcı edi.
 
 == Bağlantılar ==
-* [http://www.shamilalyadin.com/ shamilalyadin.com]
+* [http://www.shamilalyadin.com/ shamilalyadin.com] {{ru icon}}
 * Safiye Kasse-İbraimova. [http://www.goloskrima.com/?p=82  Шамиль Алядин был творческой личностью и имел огромный авторитет] [[Qırım Sedası]], 2008-03-28 {{ru icon}}
 
 {{DEFAULTSORT:Alâdin, Şamil}}
