--- a/Atırav.mw
+++ b/Atırav.mw
@@ -80,4 +80,5 @@ Atırav cermaynen gaz çıqaruv ve işlev, balıq avı iri merkezidir. Şeerdeki
 [[ru:Атырау]]
 [[sv:Atyraw]]
 [[tr:Atırav]]
+[[vi:Atirau]]
 [[zh:阿特勞]]
