[[Special:Contributions/85.233.19.174|85.233.19.174]] qullanıcısınıñ 16089 nomeralı deñişikligini lâğu etüv, ([[User_talk:85.233.19.174|muzakere]])

--- a/Silez_tili.mw
+++ b/Silez_tili.mw
@@ -46,7 +46,7 @@
 [[kk:Сілез тілі]]
 [[ko:실레지아어]]
 [[no:Schlesisk]]
-[[pl:Dialekt śląski]]
+[[pl:Język śląski]]
 [[ro:Limba sileziană]]
 [[ru:Силезский диалект польского языка]]
 [[sh:Šlezijci]]
