*Empty MediaWiki Message*

--- a/Silez_tili.mw
+++ b/Silez_tili.mw
@@ -15,8 +15,7 @@
 [[İnd-Avrоpa tilleri|İnd-Avrоpa]]
 :[[Slavân tilleri|Slavân]]
 ::[[Ğarbiy Slavân tilleri|Ğarbiy Slavân]]
-:::[[Leh tili]]
-::::Silez tili
+:::Silez tili
  |elifbe        = [[latin elifbesi]]
  |ISO1          = 
  |ISO2          = 
