[[Special:Contributions/85.233.19.174|85.233.19.174]] qullanıcısınıñ 16088 nomeralı deñişikligini lâğu etüv, ([[User_talk:85.233.19.174|muzakere]])

--- a/Slavân_tilleri.mw
+++ b/Slavân_tilleri.mw
@@ -18,11 +18,11 @@
 *** [[Yuqarı Sorb tili]]
 ** Lehit sektsiyası
 *** [[Leh tili]]
-**** [[Silez tili|Silez]]
 *** Pomeran †
 **** [[Kaşub tili|Kaşub]]
 **** Slovin †
 *** Polab †
+*** [[Silez tili|Silez]]
 ** Çeh-Slоvak sektsiya
 *** [[Slоvak tili|Slovak]]
 *** [[Çeh tili|Çeh]]
