*Empty MediaWiki Message*

--- a/Şamil_Alâdin.mw
+++ b/Şamil_Alâdin.mw
@@ -12,7 +12,7 @@ Ordu hızmetinden qaytıp kelgen soñ Şamil Alâdin aqiqiy eserler yazmaq içü
 
 1941 senesi cenk başlanğanınen cebege kete ve diger Qırım yazıcılarınıñki kibi, onıñ da icadiy faaliyeti uzaq devirgece üzüle. Cenkte o atlı ve cayav asker sıralarında vzvod ve eskadron komandiri olaraq uruştı, eki defa yaralandı.
 
-Cenkten qaytıp kelgen Şamil Alâdin öz qorantasını [[Özbekistan]]da taptı. Mında o biraz vaqıt yaş temaşıcılar teatriniñ direktorı vazifesinde çalıştı, soñra 1949 senesinden başlap çoq yıllar devamında Özbekistan yazıcıları birliginiñ apparatında edebiy konsültant, mesül kâtip olıp çalıştı. 
+Cenkten qaytıp kelgen Şamil Alâdin öz qorantasını [[Özbekistan]]da taptı. Mında o biraz vaqıt yaş temaşıcılar teatriniñ direktorı vazifesinde çalıştı, soñra 1949 senesinden başlap çoq yıllar devamında Özbekistan yazıcıları birliginiñ apparatında edebiy konsultant, mesül kâtip olıp çalıştı. 
 1965–1966 seneleri az vaqıt “Lenin bayrağı” muarririniñ muavini oldı, soñ kene Yazıcılar birligine işke keçti.
 
 1980–1985 seneleri ise “Yıldız” mecmuasınıñ baş muarriri oldı. Çoq yıllar Özbekistan yazıcıları birliginiñ yanındaki qırımtatar edebiyatı sektsiyasınıñ reisi oldı.
