*Empty MediaWiki Message*

--- a/Refat_Appazov.mw
+++ b/Refat_Appazov.mw
@@ -7,3 +7,9 @@ Oquvnı tamamlağan soñ Moskova civarında Kaliningrad (şimdiki Korolöv) şee
 Refat Appazov 200 'den fazla ilmiy işler müellifidir.1935 senesiniñ devamıñda bir zamanlar özüniñ oquğanı Bauman aliy tehnikiy oquv yurtunda ve Moskova aviatsiya institutlarında ocalıq yaptı, olacaq alimlerni azırladı. 
 
 Ömüriniñ esas qısmını ilimge, qapalı, gizli müessiselerde çalışuvğa bağışlağan Refat Appazov tabiiy ki, milliy areketke açıqtan-açıq qatılıp olamadı. 1987 senesi Qırımtatar milleti kütleviy surette Vatanğa dönip başladıqtan soñra milliy areket saflarına qoşuldı. 1990 -1991 senesi V. Dogujiyev reberligindeki Qırımtatar halqınıñ problemleri boyunca devdet komissiyasınıñ azası oldı. 1991 senesi Aqmescitte olıp keçken Qırımtatar halqınıñ qurultayında iştirak etti ve Mecliske seçildi. 2008 senesinde vefat etti.
+
+== Menbalar ==
+[[Kalgay mecmuası]]
+
+{{DEFAULTSORT:Appazov, Refat}}
+[[Kategoriya:Alimler]]
