*Empty MediaWiki Message*

--- a/Refat_Appazov.mw
+++ b/Refat_Appazov.mw
@@ -1,5 +1,5 @@
-Refat Appazov 1920- 2008
-1920 senesi Eylül 8-de Aqmescitte dünyağa kelgen Refat ağa ilk oqulnı Yalta şeerinde Qırımtatar mektebinde başladı, sekizinci sınıftan Rusça oqudı. Oquvdan soñ 1939 senesi Moskova'da ki N. Bauman adı-na Yüksek Teknik oquv yurtuna (sabıq Sovyetler devletinde eñ nufuzlı oquv yurtlarından biri) kire. 
+Refat Appazov (1920- 2008)
+ 1920 senesi Eylül 8-de Aqmescitte dünyağa kelgen Refat ağa ilk oqulnı Yalta şeerinde Qırımtatar mektebinde başladı, sekizinci sınıftan Rusça oqudı. Oquvdan soñ 1939 senesi Moskova'da ki N. Bauman adı-na Yüksek Teknik oquv yurtuna (sabıq Sovyetler devletinde eñ nufuzlı oquv yurtlarından biri) kire. 
 
 
 Oquvnı tamamlağan soñ Moskova civarında Kaliningrad (şimdiki Korolöv) şeerinde yerleşken ilmiy-tedqiqat Enstitüsünde çalışıp başlay, mında o ilki uzun menzilli roketler ve SSSR roket-feza tehnikası genel proje mühendisi, meşur Sergey Korolöv ile tanıştı ve onıñ bivasta reberligi altında 20 yıl çalıştı. Refat Appazov tez arada yetekçi proje mühendisler sırasında yer alıp, Venera ve Mars yoldaşlarına yollanılğan feza apparatları,Sovet-Amerika "Soyuz-Apollon", "Energiya-Buran" roket-feza kompleksleriniñ projelerine qatıldı. 
