--- a/Refat_Appazov.mw
+++ b/Refat_Appazov.mw
@@ -1,13 +1,12 @@
-Refat Appazov (1920- 2008)
+'''Refat Appazov''' (1920 - 2008) - belli qırırmtatar alimi.
 
-1920 senesi Eylül 8-de Aqmescitte dünyağa kelgen Refat ağa ilk oqulnı Yalta şeerinde Qırımtatar mektebinde başladı, sekizinci sınıftan Rusça oqudı. Oquvdan soñ 1939 senesi Moskova'da ki N. Bauman adı-na Yüksek Teknik oquv yurtuna (sabıq Sovyetler devletinde eñ nufuzlı oquv yurtlarından biri) kire. 
+1920 senesi Eylül 8-de [[Aqmescit]]te dünyağa kelgen Refat Appazov ilk tasilini [[Yalta]] şeerinde Qırımtatar mektebinde başladı, sekizinci sınıftan Rusça oqudı. Oquvdan soñ 1939 senesi [[Moskova]]da ki N. Bauman adına Yüksek Tehnik oquv yurtuna (sabıq [[Şuralar Birligi]]nde eñ nufuzlı oquv yurtlarından biri) kire. 
 
+Oquvnı tamamlağan soñ Moskova civarında Kaliningrad (şimdiki Korolöv) şeerinde yerleşken ilmiy-tedqiqat institutında çalışıp başlay, mında o ilki uzun menzilli raketler ve ŞSCB raket-feza tehnikası genel proyekt müendisi, meşur [[Sergey Korolöv]] ile tanıştı ve onıñ bivasta reberligi altında 20 yıl çalıştı. Refat Appazov tez arada yetekçi proyekt müendisler sırasında yer alıp, Venera ve Mars yoldaşlarına yollanılğan feza apparatları, Sovet-Amerika "Soyuz-Apollon", "Energiya-Buran" raket-feza kompleksleriniñ proyektlerine qatıldı. 
 
-Oquvnı tamamlağan soñ Moskova civarında Kaliningrad (şimdiki Korolöv) şeerinde yerleşken ilmiy-tedqiqat Enstitüsünde çalışıp başlay, mında o ilki uzun menzilli roketler ve SSSR roket-feza tehnikası genel proje mühendisi, meşur Sergey Korolöv ile tanıştı ve onıñ bivasta reberligi altında 20 yıl çalıştı. Refat Appazov tez arada yetekçi proje mühendisler sırasında yer alıp, Venera ve Mars yoldaşlarına yollanılğan feza apparatları,Sovet-Amerika "Soyuz-Apollon", "Energiya-Buran" roket-feza kompleksleriniñ projelerine qatıldı. 
+Refat Appazov 200-den fazla ilmiy işler müellifidir. 1935 senesiniñ devamında bir zamanlar özüniñ oquğanı Bauman aliy tehnikiy oquv yurtunda ve Moskova Aviatsiya İnstitutında ocalıq yaptı, olacaq alimlerni azırladı. 
 
-Refat Appazov 200 'den fazla ilmiy işler müellifidir.1935 senesiniñ devamıñda bir zamanlar özüniñ oquğanı Bauman aliy tehnikiy oquv yurtunda ve Moskova aviatsiya institutlarında ocalıq yaptı, olacaq alimlerni azırladı. 
-
-Ömüriniñ esas qısmını ilimge, qapalı, gizli müessiselerde çalışuvğa bağışlağan Refat Appazov tabiiy ki, milliy areketke açıqtan-açıq qatılıp olamadı. 1987 senesi Qırımtatar milleti kütleviy surette Vatanğa dönip başladıqtan soñra milliy areket saflarına qoşuldı. 1990 -1991 senesi V. Dogujiyev reberligindeki Qırımtatar halqınıñ problemleri boyunca devdet komissiyasınıñ azası oldı. 1991 senesi Aqmescitte olıp keçken Qırımtatar halqınıñ qurultayında iştirak etti ve Mecliske seçildi. 2008 senesinde vefat etti.
+Ömüriniñ esas qısmını ilimge, qapalı, gizli müessiselerde çalışuvğa bağışlağan Refat Appazov tabiiy ki, milliy areketke açıqtan-açıq qatılıp olamadı. 1987 senesi Qırımtatar milleti kütleviy sürette Vatanğa dönip başlağandan soñra milliy areket saflarına qoşuldı. 1990 -1991 senesi V. Dogujiyev reberligindeki Qırımtatar halqınıñ problemleri boyunca devlet komissiyasınıñ azası oldı. 1991 senesi Aqmescitte olıp keçken [[Qırımtatar Milliy Qırultayı|Qırımtatar halqınıñ Qurultayında]] iştirak etti ve [[Qırımtatar Milliy Meclisi|Mecliske]] saylandı. 2008 senesinde vefat etti.
 
 == Menbalar ==
 [[Kalgay mecmuası]]
