--- a/Aqyar.mw
+++ b/Aqyar.mw
@@ -23,7 +23,7 @@
  |cedvelde region2 adı       =
  |içki bölünüv               = 
  |baş türü                   = şeer başı
- |baş                        = Sergey Kunitsin
+ |baş                        = Sergey Kunitsın
  |temeli qoyulğan tarihı     =
  |ilki añıluv                = 
  |evelki adları              =
